--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="utf-8">
     <title>Games Enterprises - Solar Energy</title>
     <meta name="viewport" content="width=device-width, maximum-scale=0.8,user-scalable=0">
-    <meta content="solar energy, solar solutions, renewable energy, solar installation, solar projects, solar company" name="keywords">
-    <meta content="Games Enterprises is a leading provider of solar energy solutions, offering expert installation, innovative projects, and reliable services across India." name="description">
-    
+    <meta content="solar energy, solar solutions, renewable energy, solar installation, solar projects, solar company"
+        name="keywords">
+    <meta
+        content="Games Enterprises is a leading provider of solar energy solutions, offering expert installation, innovative projects, and reliable services across India."
+        name="description">
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
