--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <small class="fa fa-phone-alt text-primary me-2"></small>
                     <small>+91 8853507777</small>
                 </div>
-                <div class="h-100 d-inline-flex align-items-center mx-n2">
+                <div class="h-100   d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
                             class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
@@ -247,77 +247,6 @@
     </div>
     <!-- Service End -->
 
-
-    <!-- Feature Start /WHy choose us -->
-    <div id="whyChooseUs" class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
-        <div class="container feature px-lg-0">
-            <div class="row g-0 mx-lg-0">
-                <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="p-lg-5 ps-lg-0">
-                        <h6 class="text-primary">Why Choose Us!</h6>
-                        <h1 class="mb-4">Empowering India with Solar Solutions</h1>
-                        <p class="mb-4 pb-2">Games Enterprises, led by solar expert Chanchal Singh Yadav, is dedicated
-                            to revolutionizing India's energy landscape through innovative solar solutions. With a focus
-                            on installation, training, and research, we aim to create a brighter, greener future for
-                            generations to come.</p>
-                        <div class="row g-4">
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-check text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Quality</p>
-                                        <h5 class="mb-0">Services</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-user-check text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Expert</p>
-                                        <h5 class="mb-0">Workers</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-drafting-compass text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Free</p>
-                                        <h5 class="mb-0">Consultation</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-headphones text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Customer</p>
-                                        <h5 class="mb-0">Support</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg"
-                            style="object-fit: cover;" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Feature End -->
 
 
     <!-- Projects Start -->
@@ -508,20 +437,20 @@
                                         style="height: 55px;" required>
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input name="email" type="email" class="form-control border-0" placeholder="Your Email"
-                                        style="height: 55px;" >
+                                    <input name="email" type="email" class="form-control border-0"
+                                        placeholder="Your Email" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input name="phone" type="text" class="form-control border-0" placeholder="Your Mobile"
-                                        style="height: 55px;" required>
+                                    <input name="phone" type="text" class="form-control border-0"
+                                        placeholder="Your Mobile" style="height: 55px;" required>
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input name="location" type="text" class="form-control border-0" placeholder="Your Location"
-                                        style="height: 55px;" required>
+                                    <input name="location" type="text" class="form-control border-0"
+                                        placeholder="Your Location" style="height: 55px;" required>
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <select name="service" class="form-select" aria-label="Services" class="form-control border-0"
-                                        style="height: 55px;" required>
+                                    <select name="service" class="form-select" aria-label="Services"
+                                        class="form-control border-0" style="height: 55px;" required>
                                         <option selected>Select Service</option>
                                         <option value="solar_panel">Solar Panels</option>
                                         <option value="led_lighting">LED Lighting</option>
